.scratch/oxcaml_research/concurrency_model/h3_hardening/t6_observability/results/compile.out
== observability_positive (pass) ==
observability_positive child_spans=4 attrs_per_child=2 metric_total=4 reassembly_us=983 reassembly_pct=10.28
PASS expected-pass observability_positive
== tracer_collector_capture_negative (fail) ==
File "scratch/oxcaml_research/concurrency_model/h3_hardening/t6_observability/tracer_collector_capture_negative.ml", line 16, characters 21-38:
16 |            (fun _ -> Effet.Tracer.dump collector)
                          ^^^^^^^^^^^^^^^^^
Error: The value "Effet.Tracer.dump" is "nonportable"
       but is expected to be "shareable"
         because it is used inside the function at file "scratch/oxcaml_research/concurrency_model/h3_hardening/t6_observability/tracer_collector_capture_negative.ml", lines 14-17, characters 48-50
         which is expected to be "shareable".
PASS expected-fail tracer_collector_capture_negative
== closure_attribute_negative (fail) ==
File "scratch/oxcaml_research/concurrency_model/h3_hardening/t6_observability/closure_attribute_negative.ml", line 20, characters 9-71:
20 |          Parallel.fork_join2 parallel (fun _ -> event) (fun _ -> event))))
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type "#(bad_event * bad_event)"
       but an expression was expected of type "('a : value)"
       The layout of #(bad_event * bad_event) is value & value
         because it is an unboxed tuple.
       But the layout of #(bad_event * bad_event) must be a sublayout of 
           value.
PASS expected-fail closure_attribute_negative
summary: pass=3 fail=0
